fixing ansible-playbook and add .dockerignore

--- a/ansible-deployment/pb_deployment.yml
+++ b/ansible-deployment/pb_deployment.yml
@@ -5,7 +5,7 @@
   force_handlers: true
   tasks:
     - name: Deploy App to Production
-      import_role:
+      include_role:
         name: deployer
       loop: "{{ query('inventory_hostnames', 'production', wantlist=True)}}"
       loop_control:
